cmake_minimum_required(VERSION 3.9)
project(mechka_v_2007_06_04_01)

set(CMAKE_CXX_STANDARD 11)

add_executable(mechka_v_2007_06_04_01
        crno.bmp
        Makefile
        meche2.c
        pick.c
        planina.bmp
        primer.c
        shadow.c
        ushko1.bmp
        ushko3.bmp
        utils.c
        utils.h
        zivotno.jpg)
